--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 ### PROJECT SETTINGS
 
 PROJECT_NAME=whattodo
-PROJECT_BASE_URL=php.docker.localhost
+PROJECT_BASE_URL=whattodo.docker.localhost
 
 DB_NAME=php
 DB_USER=php
@@ -19,46 +19,18 @@ DB_DRIVER=mysql
 # Linux (uid 1000 gid 1000)
 
 PHP_TAG=8.4-dev-4.56.7
-#PHP_TAG=8.3-dev-4.56.7
-#PHP_TAG=8.2-dev-4.56.7
-#PHP_TAG=8.1-dev-4.56.7
-
-# macOS (uid 501 gid 20)
-
-#PHP_TAG=8.3-dev-macos-4.56.7
-#PHP_TAG=8.2-dev-macos-4.56.7
-#PHP_TAG=8.1-dev-macos-4.56.7
 
 ### --- NGINX ----
 
 NGINX_TAG=1.28-5.42.0
-#NGINX_TAG=1.27-5.42.0
 
 ### --- NODE ---
 
 NODE_TAG=22-dev-1.50.0
-#NODE_TAG=20-dev-1.50.0
-#NODE_TAG=18-dev-1.50.0
-
-### --- MARIADB ----
-
-MARIADB_TAG=11.4-3.31.0
-#MARIADB_TAG=10.11-3.31.0
-#MARIADB_TAG=10.6-3.31.0
-#MARIADB_TAG=10.5-3.31.0
-
-### --- POSTGRESQL ----
-
-POSTGRES_TAG=17-1.35.6
-#POSTGRES_TAG=16-1.35.6
-#POSTGRES_TAG=15-1.35.6
-#POSTGRES_TAG=14-1.35.6
-#POSTGRES_TAG=13-1.35.6
 
 ### --- VALKEY ---
 
 VALKEY_TAG=8-1.0.1
-#VALKEY_TAG=7-1.0.1
 
 ### --- VARNISH ---
 
