--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "edgaras.malukas@gmail.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "phpmd/phpmd": "^2.15"
+    }
 }
