--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "edgaras/what-to-do",
     "autoload": {
         "psr-4": {
-            "Edgaras\\WhatToDo\\": "src/"
+            "Edgaras\\WhatToDo\\": "src/",
+            "Edgaras\\WhatToDo\\Tests\\": "tests/"
         }
     },
     "authors": [
