--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     },
     "require": {
         "twig/twig": "^3.21",
-        "symfony/http-foundation": "^7.3"
+        "symfony/http-foundation": "^7.3",
+      "ext-pdo": "*"
     }
 }
